--- a/css/index.css
+++ b/css/index.css
@@ -268,3 +268,21 @@ footer nav a {
         color: black;
     }
 }
+
+.register {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    padding: 30px;
+    margin: 50px auto;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
+.form-row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
